--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Ignacio Peralta <nachoperalta0@gmail.com>
+Tatiana Fernández <tatifernandez34@gmail.com>
